 + Added Basic Flying Saucer Training
 + Rope-Knocking Challenge was improved (now awards score based on kills and time; taunts for knocking out hedgehogs)
 + A few campaign missions now save your personal best successes (e.g. fastest finish in Hard Flying) which get shown after you finish them agin
 + Capture The Flag supports setting number of captures with script parameter “capture=<number>”
 * Portal Mind Challenge was cleaned up and reworked (especially less awful wording)
 * Fixed TechRacer not recording finish if time was >= 100s
 * Fixed Target Practice missions getting stuck when a target dropped into water
 * Fixed mistakes and bad wording of strings in several missions, scripts and campaigns
 * Fixed Lua error message in A Classic Fairytale mission 8
 * Fixed Lua error messages and broken stats screen in Climb Home singleplayer mission
 * Fixed Capture the Flag error: Flag of first team spawned at second hog instead of first

Frontend:
 + Menu screens got few new icons and other tweaks, e.g. larger dropdown lists for easier access
 + Additional button for just randomizing theme that will not change your selected map
 + Randomizing map/theme in online-mode will not include DLC-content
 * Creating randomized teams now randomizes (almost) every aspect
 * Fixed mostly broken descriptions for multiplayer mission maps
 * Clicking on "New" in weapon scheme editor now creates empty weapon scheme instead of default

Content Creation:
 + Theme objects can now have more than 1 in-land rect specified. You can specify the amount in theme.cfg by adding another number (and ,) before the first rect
 + Themes can now use flakes with negative falling speed (rising flakes)
 + Themes can now contain custom sound files: splash.ogg Droplet1.ogg Droplet2.ogg Droplet3.ogg skip.ogg
 + Simplified hat format for unanimated hats; a single 32×32 image is enough. For clan hats, use size 64×32, with the color overlay at the right

Lua-API: